[package]
name = "pic2bombhopper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bombhopper = "0.1.0"
infer = "0.8.1"
serde_json = "1.0.81"
log = "0.4.0"
env_logger = "0.8.4"
imageproc = "0.23.0"

[dependencies.clap]
version = "3.2.6"
features = ["derive"]

[dependencies.image]
version = "0.24.2"
features = ["webp"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]